@@ -1193,6 +1193,8 @@ nuttx-0.3.18 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Each NSH command can not be disabled through a configuration setting. All of these
           settings make the configuration of NSH potentially complex but also allow it to squeeze
           into very small memory footprints.
+	* Added a block to character (BCH) driver.  This is kind of the reverse of the loop
+	  device; it allows you access a block device like a character device.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
